<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".ReminderDetailsActivity">

    <TextView
        android:id="@+id/detailstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_details"
        android:textColor="@color/light_orange"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleDisplay"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/task_title_hint"
        android:textColorHint="@color/light_orange"
        app:boxBackgroundColor="@color/medium_purple"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailstitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins"
            android:inputType="none"
            android:focusable="false"
            android:textColor="@color/light_purple"
            android:textColorHint="@color/light_orange"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dateDisplay"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card"
        android:drawableEnd="@drawable/calendar_icon"
        android:fontFamily="@font/poppins"
        android:text="@string/date"
        android:textAllCaps="false"
        android:textColor="@color/light_purple"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDisplay" />

    <Button
        android:id="@+id/timeDisplay"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card"
        android:drawableEnd="@drawable/time_icon"
        android:fontFamily="@font/poppins"
        android:text="@string/time"
        android:textAllCaps="false"
        android:textColor="@color/light_purple"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDisplay" />

    <ImageView
        android:id="@+id/imageImportance"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDisplay"
        android:contentDescription="@string/title_details" />

</androidx.constraintlayout.widget.ConstraintLayout>