<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".AddReminderActivity">

    <TextView
        android:id="@+id/addTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_title"
        android:textColor="@color/light_orange"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/task_title_hint"
        android:textColorHint="@color/light_orange"
        app:boxBackgroundColor="@color/medium_purple"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/light_purple"
            android:textColorHint="@color/light_orange"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/date"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card"
        android:drawableEnd="@drawable/calendar_icon"
        android:fontFamily="@font/poppins"
        android:text="@string/date"
        android:textAllCaps="false"
        android:textColor="@color/light_purple"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <Button
        android:id="@+id/time"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card"
        android:drawableEnd="@drawable/time_icon"
        android:fontFamily="@font/poppins"
        android:text="@string/time"
        android:textAllCaps="false"
        android:textColor="@color/light_purple"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/outlined_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_bold"
        android:text="cancel"
        android:textAllCaps="false"
        android:textColor="@color/light_orange"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/addTaskButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTaskButton"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/filled_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_bold"
        android:text="add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_light"
        android:text="Task imortance:"
        android:textColor="@color/light_orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="348dp"
        android:layout_height="151dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Low Importance"
            android:textColor="@color/light_purple"
            app:buttonTint="@color/light_pink" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Medium Importance"
            android:textColor="@color/light_purple"
            app:buttonTint="@color/light_pink" />

        <RadioButton
            android:id="@+id/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="High Importance"
            android:textColor="@color/light_purple"
            app:buttonTint="@color/light_pink" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>